<resources>
    <string name="app_name">SIAS App</string>
    <string name="studentlogin">STUDENT LOGIN</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="selected_item">Selected item:</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="online_class">Online Class</string>
    <string name="syllabus">Syllabus</string>
    <string name="question_papers">Question Papers</string>
    <string name="our_team">Our Team</string>
    <string name="notes_and_materials">Notes and Materials</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log out</string>
    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>
</resources>
