<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/online_class"
            android:icon="@drawable/ic_baseline_class_24"
            android:title="@string/online_class" />
        <item
            android:id="@+id/syllabus"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/syllabus" />
        <item
            android:id="@+id/question_papers"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/question_papers" />
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_baseline_note_24"
            android:title="@string/notes_and_materials" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/our_team" />


    </group>
</menu>